etnaviv: hook up stub etnaviv intermediate representation
This change adds the foundations for eir and some bigger
compiler changes.

Signed-off-by: Christian Gmeiner <christian.gmeiner@gmail.com>

--- a/src/gallium/drivers/etnaviv/Makefile.sources
+++ b/src/gallium/drivers/etnaviv/Makefile.sources
@@ -7,6 +7,9 @@ C_SOURCES :=  \
 	hw/state_blt.xml.h \
 	hw/state.xml.h \
 	\
+	eir/eir.c \
+	eir/eir.h \
+	\
 	etnaviv_asm.c \
 	etnaviv_asm.h \
 	etnaviv_blend.c \
